Reformatted code + replaced stuff with Map.of(), Set.of(), List.of()